--- a/css cheatsheet/cssindex.html
+++ b/css cheatsheet/cssindex.html
@@ -19,7 +19,7 @@
         <div class="box-2">
             <h1>Goodbye world</h1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat nihil dolorum eos vitae vero delectus magnam quae dolores? Enim, vero molestiae ipsam labore illum architecto atque unde culpa. Necessitatibus, quia.</p>
-
+            <a class="buttom" href="">Read More</a>
         </div>
         <div class="categories">
             <h2>categories</h2>
@@ -47,6 +47,28 @@
             <input class="button" type="submit" value="submit"
             name="">
         </form>
+        <div class="block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id possimus, ab tempore sed totam rerum placeat adipisci impedit quidem veritatis cupiditate maxime dolor temporibus? Tempore assumenda facilis ullam reprehenderit quia.</p>
+        </div>
+        <div class="block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id possimus, ab tempore sed totam rerum placeat adipisci impedit quidem veritatis cupiditate maxime dolor temporibus? Tempore assumenda facilis ullam reprehenderit quia.</p>
+        </div>
+        <div class="block">
+            <h3>Heading</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id possimus, ab tempore sed totam rerum placeat adipisci impedit quidem veritatis cupiditate maxime dolor temporibus? Tempore assumenda facilis ullam reprehenderit quia.</p>
+        </div>
+
+        <div class="clr"></div>
+
+        <div id="main-block">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id possimus, ab tempore sed totam rerum placeat adipisci impedit quidem veritatis cupiditate maxime dolor temporibus? Tempore assumenda facilis ullam reprehenderit quia.</p>
+        </div>
+        
+        <div id="sidebar">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id possimus, ab tempore sed totam rerum placeat adipisci impedit quidem veritatis cupiditate maxime dolor temporibus? Tempore assumenda facilis ullam reprehenderit quia.</p>
+        </div>
 
     </div><!--./container-->
 
