--- a/css cheatsheet/cssindex.html
+++ b/css cheatsheet/cssindex.html
@@ -70,8 +70,31 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id possimus, ab tempore sed totam rerum placeat adipisci impedit quidem veritatis cupiditate maxime dolor temporibus? Tempore assumenda facilis ullam reprehenderit quia.</p>
         </div>
 
-    </div><!--./container-->
+        <div class="clr"></div>
 
+        <div class="p-box">
+            <h1>Hello World</h1>
+            <h2>Goodbye</h2>
+        </div>
+
+        <ul class="my-list">
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+            <li>List Item</li>
+        </ul>
+
+    </div><!--./container-->
+    <a class="fix-me button" href="">Hello</a>
     <div style="margin-top:500px;"></div>
 </body>
 </html>
